@@ -1,3 +1,8 @@
+2008-04-09  Dmitry Xmelkov  <dmix@gmail.ru>
+
+	* include/avr/eeprom.h: Restore 'extern "C"' envelope. It was losted
+	at 2005, with Avr-libc-1.2.6.
+
 2008-04-08  Eric B. Weddington  <eric.weddington@atmel.com>
 
 	Fix for bug #22877:
